feat(#977): list for invited projects
Added new endpoints to be able to list for a user
all projects, where he is part of.
